force-app/main/default/objects/copado__Automation_Rule__c/fields/copado__Automated_Action__c.field-meta.xml
<CustomField>
    <fullName>copado__Automated_Action__c</fullName>
    <description>Action that will be executed by the automation rule depending on the selected Automation Type.</description>
    <inlineHelpText>Action that will be executed based on the source action and its result.</inlineHelpText>
    <label>Automated Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>