force-app/main/default/objects/copado__Automation_Rule__c/fields/copado__Automated_Action_Callback__c.field-meta.xml
<CustomField>
    <fullName>copado__Automated_Action_Callback__c</fullName>
    <inlineHelpText>API name of the flow used to perform more specific operations, like updating records status, creating other records, etc.</inlineHelpText>
    <label>Flow or Class API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>