force-app/main/default/objects/copado__Automation_Rule__c/fields/copado__Automation_Connector__c.field-meta.xml
<CustomField>
    <fullName>copado__Automation_Connector__c</fullName>
    <inlineHelpText>Connector that maps the payload and parameters between the source and automated actions.Select &quot;Custom&quot; if you want to specify a custom connector class</inlineHelpText>
    <label>Automation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>