force-app/main/default/objects/copado__Automation_Rule__c/fields/copado__Cron_Expression__c.field-meta.xml
<CustomField>
    <fullName>copado__Cron_Expression__c</fullName>
    <inlineHelpText>Represents the schedule cron expression</inlineHelpText>
    <label>Cron Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>