force-app/main/default/objects/copado__Automation_Rule__c/fields/copado__Execution__c.field-meta.xml
<CustomField>
    <fullName>copado__Execution__c</fullName>
    <inlineHelpText>Indicate if the automated action should be immediately executed or it&apos;ll be scheduled</inlineHelpText>
    <label>Execution Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
                <default>true</default>
                <label>Immediate</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>